--- a/app/translations/cs/core.json
+++ b/app/translations/cs/core.json
@@ -1,17 +1,17 @@
 {
     "cancel": "Zrušit",
     "add": "Přidat",
-    "addit": "Add & Edit",
+    "addit": "Přidat a upravit",
     "save": "Uložit",
     "saved": "Uloženo!",
-    "change": "Change",
+    "change": "Změnit",
     "delete": "Smazat",
     "insert": "Vložit",
     "ok": "Ok",
-    "routes.error.invalid": "Invalid Panel URL",
-    "controller.error.invalid": "Invalid controller",
-    "controller.error.action": "Invalid action",
-    "view.error.invalid": "Invalid view:",
+    "routes.error.invalid": "Neplatná URL panelu",
+    "controller.error.invalid": "Neplatný controller",
+    "controller.error.action": "Neplatná akce",
+    "view.error.invalid": "Neplatný view:",
     "options.show": "Zobrazit možnosti",
     "options.hide": "Skrýt možnosti",
     "installation": "Instalace",
@@ -37,9 +37,9 @@
     "login.password.label": "Heslo",
     "login.error": "Chybné jméno nebo heslo",
     "login.button": "Přihlásit",
-    "login.log.error.permissions": "Login log file is not writable.",
+    "login.log.error.permissions": "Log soubor pro přihlášení není zapisovatelný.",
     "logout": "Odhlásit se",
-    "topbar.error.class.definition": "Missing topbar definition for class:",
+    "topbar.error.class.definition": "Chybějící topbar definice pro třídu:",
     "dashboard": "Přehled",
     "dashboard.index.pages.title": "Stránky",
     "dashboard.index.pages.edit": "Upravit",
@@ -51,23 +51,24 @@
     "dashboard.index.metatags.edit": "Upravit",
     "dashboard.index.history.title": "Vaše poslední změny",
     "dashboard.index.history.text": "Zde budou zobrazeny stránky, které jste naposledy měnili, abyste k nim měli snadný přístup.",
-    "dashboard.index.license.title": "Kirby license",
+    "dashboard.index.license.title": "Kirby licence",
+    "dashboard.index.license.text": "It seems you are running Kirby on a public server without a valid license!\n\nPlease, support Kirby and (link: {buy} text: buy a license now)\n\nIf you already have a license key, just add it to your config file: (link: {docs} text: site/config/config.php)",
     "metatags": "Parametry webu",
-    "metatags.info": "Kirby info",
-    "metatags.license": "Kirby license",
-    "metatags.version.toolkit": "Toolkit version",
-    "metatags.version.kirby": "Kirby version",
-    "metatags.version.panel": "Panel version",
+    "metatags.info": "Kirby informace",
+    "metatags.license": "Kirby licence",
+    "metatags.version.toolkit": "Verze Toolkitu",
+    "metatags.version.kirby": "Verze Kirby",
+    "metatags.version.panel": "Verze panelu",
     "metatags.back": "Zpět na přehled",
-    "metatags.files": "Site files",
-    "site.delete.error": "The site cannot be deleted",
+    "metatags.files": "Soubory webu",
+    "site.delete.error": "Tento web nemůže být smazán",
     "pages.show.settings": "Nastavení stránky",
     "pages.show.preview": "Otevřít náhled",
     "pages.show.changeurl": "Změnit URL",
-    "pages.show.invisible": "Status: invisible",
-    "pages.show.visible": "Status: visible",
-    "pages.show.changes.text": "You have unsaved changes!",
-    "pages.show.changes.button": "Discard",
+    "pages.show.invisible": "Status: neviditelný",
+    "pages.show.visible": "Status: viditelný",
+    "pages.show.changes.text": "Máte neuložené změny!",
+    "pages.show.changes.button": "Zahodit",
     "pages.show.delete": "Smazat tuto stránku",
     "pages.show.subpages.title": "Stránky",
     "pages.show.subpages.edit": "Upravit",
@@ -91,7 +92,7 @@
     "pages.add.url.close": "Zavřit",
     "pages.add.url.help": "Formát: malé a-z, 0-9 a pomlčky",
     "pages.add.template.label": "Šablona",
-    "pages.add.error.create": "The page could not be created",
+    "pages.add.error.create": "Stránka nemohla být vytvořena",
     "pages.add.error.title": "Chybí název",
     "pages.add.error.template": "Šablona chybí",
     "pages.add.error.max.headline": "Nové stránky nejsou povoleny",
@@ -100,13 +101,13 @@
     "pages.url.uid.label.option": "Vytvořit z názvu",
     "pages.url.error.exists": "Stránka se stejnou příponou již existuje",
     "pages.url.error.move": "Nepodařilo se změnit příponu",
-    "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
-    "pages.toggle.position": "Position",
-    "pages.toggle.invisible": "invisible",
-    "pages.toggle.publish": "Do you really want to change the status of this page to **visible?**",
-    "pages.toggle.hide": "Do you really want to change the status of this page to **invisible?**",
-    "pages.toggle.error.error": "The status of the error page cannot be changed",
+    "pages.url.error.rights": "Nemůžete změnit URL této stránky",
+    "pages.url.home.error.error": "URL úvodní a chybových stránek nemohou být změněny",
+    "pages.toggle.position": "Pozice",
+    "pages.toggle.invisible": "neviditelný",
+    "pages.toggle.publish": "Opravdu chcete změnit status této stránky na **viditelný?**",
+    "pages.toggle.hide": "Opravdu chcete změnit status této stránky na **neviditelný?**",
+    "pages.toggle.error.error": "Status této error stránky nemůže být změněn",
     "pages.delete.headline": "Opravdu chcete smazat tuto stránku?",
     "pages.delete.error.home.headline": "Úvodní stránka nemůže být smazána",
     "pages.delete.error.home.text": "Snažíte se smazat úvodní stránka webu. To není možné a způsobilo by to nechtěné problémy.",
@@ -129,8 +130,8 @@
     "subpages.index.visible.help": "Přetáhněte sem neviditelné stránky, pokud je chcete řadit a udělat viditelné.",
     "subpages.index.invisible": "Neviditelné stránky",
     "subpages.index.invisible.help": "Přetáhněte sem viditelné stránky, pokud je chcete udělat neviditelné a přestat je řadit.",
-    "subpages.add.error": "This page is not allowed to have subpages",
-    "subpages.add.error.more": "This page cannot have any more subpages",
+    "subpages.add.error": "Tato stránka nemůže mít podstrany",
+    "subpages.add.error.more": "Tato stránka nemůže mít žádné další podstrany",
     "subpages.error.missing": "Stránku se nepodařilo nalézt",
     "files": "Soubory",
     "files.index.headline": "Soubory pro",
@@ -140,15 +141,15 @@
     "files.index.upload.first.button": "Nahrajte první soubor",
     "files.index.edit": "Upravit",
     "files.index.delete": "Smazat",
-    "files.index.error.disabled": "The page is not allowed to have any files",
-    "files.add.error.max": "The maximum number of files for the current page has been reached.",
-    "files.add.error.extension.missing": "You cannot upload files without extension",
-    "files.add.error.extension.forbidden": "Forbidden file extension",
-    "files.add.error.mime.forbidden": "Forbidden mime type",
-    "files.add.error.htaccess": "htaccess files cannot be uploaded",
-    "files.add.error.invisible": "Invisible files cannot be uploaded",
-    "files.add.blueprint.type.error": "Page only allows:",
-    "files.add.blueprint.size.error": "Page only allows file size of",
+    "files.index.error.disabled": "Tato stránka nemůže mít soubory",
+    "files.add.error.max": "Bylo dosaženo maximálního počtu souborů pro tuto stránku",
+    "files.add.error.extension.missing": "Nemůžete nahrát soubor bez přípony",
+    "files.add.error.extension.forbidden": "Zakázaná přípona souboru",
+    "files.add.error.mime.forbidden": "Zakázaný mime typ",
+    "files.add.error.htaccess": "Soubory htaccess nemohou být nahrány",
+    "files.add.error.invisible": "Neviditelné soubory nemohou být nahrány",
+    "files.add.blueprint.type.error": "Stránka povoluje pouze:",
+    "files.add.blueprint.size.error": "Stránka povoluje pouze soubory velikosti",
     "files.show.name.label": "Jméno souboru",
     "files.show.info.label": "Typ / Velikost / Rozměry",
     "files.show.link.label": "Veřejný odkaz",
@@ -196,29 +197,29 @@
     "users.form.back": "Zpět na uživatele",
     "users.form.error.password.confirm": "Prosím potvrďte heslo",
     "users.form.error.update": "Uživatel nemohl být aktualizován",
-    "users.form.error.update.rights": "You are not allowed to update this user",
+    "users.form.error.update.rights": "Nemáte dovoleno měnit tohoto uživatele",
     "users.form.error.create": "Uživatel nemohl být vytvořen",
     "users.form.error.permissions.title": "Složka account není zapisovatelná",
     "users.form.error.permissions.text": "Prosím ověřte že složka /site/accounts existuje a je zapisovatelná.",
     "users.delete.headline": "Opravdu chcete smazat tohoto uživatele?",
     "users.delete.error": "Uživatel nemohl být smazán",
-    "users.delete.error.permission": "You are not allowed to delete users",
-    "users.delete.error.permission.single": "You are not allowed to delete this user",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
+    "users.delete.error.permission": "Nemáte dovoleno mazat uživatele",
+    "users.delete.error.permission.single": "Nemáte dovoleno smazat tohoto uživatele",
+    "users.delete.error.lastadmin": "Nemůžete smazat posledního administrátora",
     "users.avatar.drop": "Sem přetáhněte uživatelský obrázek…",
     "users.avatar.click": "…nebo klikněte pro nahrání",
     "users.avatar.error.type": "Můžete nahrát pouze soubory typu JPG, PNG a GIF",
     "users.avatar.error.folder.headline": "Složka avatar není zapisovatelná",
     "users.avatar.error.folder.text": "Prosím vytvořte složku <strong>/assets/avatars</strong> a udělejte jí zapisovatelnou, aby bylo možné nahrát obrázek.",
-    "users.avatar.error.permission": "You are not allowed to change the avatar",
+    "users.avatar.error.permission": "Nemáte dovoleno měnit avatara",
     "users.avatar.delete.error": "Nebylo možné smazat profilový obrázek",
-    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
+    "users.avatar.delete.error.permission": "Nemáte dovoleno smazat avatara tomuto uživateli",
     "users.avatar.delete.success": "Profilový obrázek byl smazán",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "Tento uživatel žádného avatara nemá",
     "users.error.missing": "Uživatele se nepodařilo nalézt",
-    "user.error.lastadmin": "You are the only admin. This cannot be changed.",
-    "form.error.missing": "The form cannot be found",
-    "form.construct.error.invalid": "Invalid form construction method",
+    "user.error.lastadmin": "Jste jediným administrátorem. Toto nelze změnit.",
+    "form.error.missing": "Formulář se nepovedlo nalézt",
+    "form.construct.error.invalid": "Neplatná konstrukční metoda formuláře",
     "fields.required": "Vyžadované",
     "fields.date.label": "Datum",
     "fields.date.months": [
@@ -263,12 +264,12 @@
     "fields.structure.add": "Přidat",
     "fields.structure.add.first": "Přidat první záznam",
     "fields.structure.empty": "Zatím nejsou žádné záznamy.",
-    "fields.structure.entry.error": "The item could not be found",
+    "fields.structure.entry.error": "Položku se nepodařilo najít",
     "fields.structure.cancel": "Zrušit",
     "fields.structure.save": "Uložit",
     "fields.structure.edit": "Upravit",
     "fields.structure.delete": "Smazat",
-    "fields.structure.delete.label": "Do you really want to delete this entry?",
+    "fields.structure.delete.label": "Opravdu chcete smazat tento záznam?",
     "fields.tags.label": "Štítky",
     "fields.tel.label": "Telefon",
     "fields.textarea.buttons.bold.label": "Tučný text",
@@ -283,10 +284,10 @@
     "fields.toggle.no": "Ne",
     "fields.toggle.on": "Zap",
     "fields.toggle.off": "Vyp",
-    "fields.error.missing.controller": "The field controller file is missing",
-    "fields.error.missing.class": "The field controller class is missing",
-    "fields.error.route.invalid": "Invalid field route",
-    "fields.error.extended": "The field cannot be extended",
+    "fields.error.missing.controller": "Soubor controller pro toto políčko chybí",
+    "fields.error.missing.class": "Třída controller pro toto políčko chybí",
+    "fields.error.route.invalid": "Neplatná cesta políčka",
+    "fields.error.extended": "Toto políčko nemůže být rozšířeno",
     "editor.link.url.label": "Cílové URL",
     "editor.link.text.label": "Text odkazu",
     "editor.link.text.help": "Text odkazu je nepovinný",
@@ -296,8 +297,8 @@
     "editor.email.text.help": "Text odkazu je nepovinný",
     "editor.file.empty": "Tato stránka nemá žádné soubory",
     "editor.image.empty": "Tato stránka nemá žádné obrázky",
-    "autocomplete.method.error": "Invalid autocomplete method",
-    "blueprints.error.default.missing": "Missing default blueprint",
+    "autocomplete.method.error": "Neplatná našeptávací metoda",
+    "blueprints.error.default.missing": "Chybí výchozí blueprint",
     "error": "Chyba",
     "error.headline": "Chyba"
 }
