--- a/app/translations/es_419/core.json
+++ b/app/translations/es_419/core.json
@@ -8,22 +8,22 @@
     "delete": "Eliminar",
     "insert": "Insertar",
     "ok": "OK",
-    "routes.error.invalid": "URL del Panel no válido",
+    "routes.error.invalid": "URL del Panel no válida",
     "controller.error.invalid": "Controlador no válido",
     "controller.error.action": "Acción no válida",
     "view.error.invalid": "Vista no válida:",
     "options.show": "Mostrar opciones",
     "options.hide": "Ocultar opciones",
     "installation": "Instalación",
-    "installation.check.headline": "Instalación del Panel Kirby",
+    "installation.check.headline": "Instalación del Panel de Kirby",
     "installation.check.text": "Kirby encontró los siguientes errores durante la instalación…",
     "installation.check.retry": "Reintentar",
     "installation.check.error": "¡Tenemos problemas!",
-    "installation.check.error.accounts": "/site/accounts no es modificable",
-    "installation.check.error.avatars": "/assets/avatars no es modificable",
+    "installation.check.error.accounts": "/site/accounts no tine permisos de escritura",
+    "installation.check.error.avatars": "/assets/avatars no tine permisos de escritura",
     "installation.check.error.blueprints": "Por favor agrega una carpeta /site/blueprints",
-    "installation.check.error.content": "La carpeta \"contenido\" y todos sus archivos y subcarpetas deben de tener permiso para modificarse.",
-    "installation.check.error.thumbs": "La carpeta \"thumbs\" debe ser modificable.",
+    "installation.check.error.content": "La carpeta \"contenido\" y todos sus archivos y subcarpetas deben de tener permiso de escritura.",
+    "installation.check.error.thumbs": "La carpeta \"thumbs\" debe tener permisos de escritura.",
     "installation.signup.username.label": "Crea tu primera cuenta",
     "installation.signup.username.placeholder": "Usuario",
     "installation.signup.email.label": "Correo electrónico",
@@ -39,7 +39,7 @@
     "login.button": "Ingresar",
     "login.log.error.permissions": "El archivo de registro del inicio de sesión no es modificable",
     "logout": "Cerrar Sesión",
-    "topbar.error.class.definition": "Missing topbar definition for class:",
+    "topbar.error.class.definition": "Falta la definición topbar para la clase:",
     "dashboard": "Inicio",
     "dashboard.index.pages.title": "Páginas",
     "dashboard.index.pages.edit": "Editar",
@@ -52,6 +52,7 @@
     "dashboard.index.history.title": "Actualizaciones recientes",
     "dashboard.index.history.text": "Las últimas páginas modificadas serán desplegadas aquí para facilitar su acceso en el futuro.",
     "dashboard.index.license.title": "Licencia Kirby",
+    "dashboard.index.license.text": "It seems you are running Kirby on a public server without a valid license!\n\nPlease, support Kirby and (link: {buy} text: buy a license now)\n\nIf you already have a license key, just add it to your config file: (link: {docs} text: site/config/config.php)",
     "metatags": "Variables del sitio",
     "metatags.info": "Información de Kirby",
     "metatags.license": "Licencia Kirby",
@@ -60,7 +61,7 @@
     "metatags.version.panel": "Versión del Panel",
     "metatags.back": "Regresar al Inicio",
     "metatags.files": "Archivos del sitio",
-    "site.delete.error": "The site cannot be deleted",
+    "site.delete.error": "El sitio no puede ser borrado",
     "pages.show.settings": "Opciones de Página",
     "pages.show.preview": "Abrir previsualización",
     "pages.show.changeurl": "Cambiar URL",
@@ -100,13 +101,13 @@
     "pages.url.uid.label.option": "Crear a partir del título",
     "pages.url.error.exists": "Una página con el mismo apéndice-url ya existe",
     "pages.url.error.move": "El apéndice-url no pudo ser cambiado",
-    "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
+    "pages.url.error.rights": "Usted no puede cambiar la URL de esta página",
+    "pages.url.home.error.error": "La URL de las paginas home y error no pueden ser cambiadas",
     "pages.toggle.position": "Posición",
     "pages.toggle.invisible": "invisible",
     "pages.toggle.publish": "¿En realidad deseas cambiar el estatus de esta página a **visible?**",
     "pages.toggle.hide": "¿En realidad deseas cambiar el estatus de esta página a **invisible?**",
-    "pages.toggle.error.error": "The status of the error page cannot be changed",
+    "pages.toggle.error.error": "El estado de la pagina de error no puede ser cambiado",
     "pages.delete.headline": "¿Estás seguro que deseas eliminar esta página?",
     "pages.delete.error.home.headline": "La página \"Home\" no puede ser eliminada",
     "pages.delete.error.home.text": "Estás intentando eliminar la página \"Home\". Esto no es posible y podría causar efectos indeseados.",
@@ -129,8 +130,8 @@
     "subpages.index.visible.help": "Arrastra las páginas invisibles aquí para ordenar y hacerlas visibles.",
     "subpages.index.invisible": "Páginas invisibles",
     "subpages.index.invisible.help": "Arrastra las páginas visibles aquí para eliminar el numero de orden y hacerlas invisibles.",
-    "subpages.add.error": "This page is not allowed to have subpages",
-    "subpages.add.error.more": "This page cannot have any more subpages",
+    "subpages.add.error": "Esta página no permite tener subpáginas",
+    "subpages.add.error.more": "Esta página ya no puede tener más subpáginas",
     "subpages.error.missing": "La página no pudo ser encontrada",
     "files": "Archivos",
     "files.index.headline": "Archivos de",
@@ -140,15 +141,15 @@
     "files.index.upload.first.button": "Subir el primer archivo",
     "files.index.edit": "Editar",
     "files.index.delete": "Eliminar",
-    "files.index.error.disabled": "The page is not allowed to have any files",
-    "files.add.error.max": "The maximum number of files for the current page has been reached.",
-    "files.add.error.extension.missing": "You cannot upload files without extension",
-    "files.add.error.extension.forbidden": "Forbidden file extension",
-    "files.add.error.mime.forbidden": "Forbidden mime type",
-    "files.add.error.htaccess": "htaccess files cannot be uploaded",
-    "files.add.error.invisible": "Invisible files cannot be uploaded",
-    "files.add.blueprint.type.error": "Page only allows:",
-    "files.add.blueprint.size.error": "Page only allows file size of",
+    "files.index.error.disabled": "Esta página no permite tener archivos",
+    "files.add.error.max": "El máximo número de archivos para la página actual ya han sido alcanzados",
+    "files.add.error.extension.missing": "Usted no puede subir archivos sin extensión",
+    "files.add.error.extension.forbidden": "Extensión de archivo prohibida",
+    "files.add.error.mime.forbidden": "Tipo mime prohibido",
+    "files.add.error.htaccess": "Los archivos htaccess no pueden ser subidos",
+    "files.add.error.invisible": "Los archivos invisibles no pueden ser subidos",
+    "files.add.blueprint.type.error": "La página únicamente permite:",
+    "files.add.blueprint.size.error": "La página únicamente permite archivos de tamaño",
     "files.show.name.label": "Nombre",
     "files.show.info.label": "Tipo / Tamaño / Dimensiones",
     "files.show.link.label": "Enlace público",
@@ -196,29 +197,29 @@
     "users.form.back": "Regresar a usuarios",
     "users.form.error.password.confirm": "Por favor confirma la contraseña",
     "users.form.error.update": "El usuario no pudo ser actualizado",
-    "users.form.error.update.rights": "You are not allowed to update this user",
+    "users.form.error.update.rights": "Usted no tiene permitido actualizar este usuario",
     "users.form.error.create": "El usuario no pudo ser creado",
     "users.form.error.permissions.title": "La carpeta de la cuenta no es modificable",
     "users.form.error.permissions.text": "Por favor asegúrate de que la carpeta \"/site/accounts\" exista y sea modificable.",
     "users.delete.headline": "¿Estás seguro que deseas eliminar este usuario?",
     "users.delete.error": "El ususario no pudo ser eliminado",
-    "users.delete.error.permission": "You are not allowed to delete users",
-    "users.delete.error.permission.single": "You are not allowed to delete this user",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
+    "users.delete.error.permission": "Usted no tiene permitido borrar usuarios",
+    "users.delete.error.permission.single": "Usted no tiene permitido borrar este usuario",
+    "users.delete.error.lastadmin": "Usted no puede borrar el último administrador",
     "users.avatar.drop": "Arrastra y suelta una imagen aquí…",
     "users.avatar.click": "…o haz click para subir",
     "users.avatar.error.type": "Sólo se pueden subir archivos con extensión JPG, PNG y GIF",
     "users.avatar.error.folder.headline": "La carpeta \"avatar\" no es modificable",
     "users.avatar.error.folder.text": "Por favor crea la carpeta <strong>/assets/avatars</strong> y hazla modificable para subir fotos de perfil.",
-    "users.avatar.error.permission": "You are not allowed to change the avatar",
+    "users.avatar.error.permission": "Usted no tiene permitido cambiar el avatar",
     "users.avatar.delete.error": "La foto de perfil no pudo ser eliminada",
-    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
+    "users.avatar.delete.error.permission": "Usted no tiene permitido borrar el avatar de este usuario",
     "users.avatar.delete.success": "La foto de perfil ha sido eliminada",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "Este usuario no tiene avatar",
     "users.error.missing": "El usuario no pudo ser encontrado",
-    "user.error.lastadmin": "You are the only admin. This cannot be changed.",
-    "form.error.missing": "The form cannot be found",
-    "form.construct.error.invalid": "Invalid form construction method",
+    "user.error.lastadmin": "Usted es el único administrador, Esto no puede ser cambiado",
+    "form.error.missing": "No se pudo encontrar el formulario",
+    "form.construct.error.invalid": "El método de construcción del formulario es inválido",
     "fields.required": "Requerido",
     "fields.date.label": "Fecha",
     "fields.date.months": [
@@ -263,12 +264,12 @@
     "fields.structure.add": "Agregar",
     "fields.structure.add.first": "Agregar la primera entrada",
     "fields.structure.empty": "Aún no existen entradas.",
-    "fields.structure.entry.error": "The item could not be found",
+    "fields.structure.entry.error": "No se pudo encontrar el item",
     "fields.structure.cancel": "Cancelar",
     "fields.structure.save": "Guardar",
     "fields.structure.edit": "Editar",
     "fields.structure.delete": "Eliminar",
-    "fields.structure.delete.label": "Do you really want to delete this entry?",
+    "fields.structure.delete.label": "¿En realidad desea borrar esta entrada?",
     "fields.tags.label": "Etiquetas",
     "fields.tel.label": "Teléfono",
     "fields.textarea.buttons.bold.label": "Texto en Negrita",
@@ -283,10 +284,10 @@
     "fields.toggle.no": "No",
     "fields.toggle.on": "Encendido",
     "fields.toggle.off": "Apagado",
-    "fields.error.missing.controller": "The field controller file is missing",
-    "fields.error.missing.class": "The field controller class is missing",
-    "fields.error.route.invalid": "Invalid field route",
-    "fields.error.extended": "The field cannot be extended",
+    "fields.error.missing.controller": "Falta el archivo del controlador del campo ",
+    "fields.error.missing.class": "Falta la clase del controlador del campo",
+    "fields.error.route.invalid": "La ruta del campo es inválida",
+    "fields.error.extended": "El campo no puede ser extendido",
     "editor.link.url.label": "Insertar URL",
     "editor.link.text.label": "Texto de Enlace",
     "editor.link.text.help": "El texto de enlace es opcional",
@@ -296,8 +297,8 @@
     "editor.email.text.help": "El texto de enlace es opcional",
     "editor.file.empty": "Esta página no contiene archivos",
     "editor.image.empty": "Esta página no contiene imágenes",
-    "autocomplete.method.error": "Invalid autocomplete method",
-    "blueprints.error.default.missing": "Missing default blueprint",
+    "autocomplete.method.error": "Método de autocompletar no válido",
+    "blueprints.error.default.missing": "Falta el blueprint predeterminado",
     "error": "Error",
     "error.headline": "Error"
 }
