--- a/app/translations/nb/core.json
+++ b/app/translations/nb/core.json
@@ -8,10 +8,10 @@
     "delete": "Slett",
     "insert": "Sett Inn",
     "ok": "Ok",
-    "routes.error.invalid": "Invalid Panel URL",
-    "controller.error.invalid": "Invalid controller",
+    "routes.error.invalid": "Ugylid Panel URL",
+    "controller.error.invalid": "Ugyldig kontroller",
     "controller.error.action": "Ugyldig handling",
-    "view.error.invalid": "Invalid view:",
+    "view.error.invalid": "Ugyldig view:",
     "options.show": "Vis alternativer",
     "options.hide": "Skjul alternativer",
     "installation": "Installasjon",
@@ -39,7 +39,7 @@
     "login.button": "Logg inn",
     "login.log.error.permissions": "Logg inn loggfilen er ikke skrivbar.",
     "logout": "Logg ut",
-    "topbar.error.class.definition": "Missing topbar definition for class:",
+    "topbar.error.class.definition": "Mangler topbar definisjon for klassen:",
     "dashboard": "Dashboard",
     "dashboard.index.pages.title": "Sider",
     "dashboard.index.pages.edit": "Rediger",
@@ -52,6 +52,7 @@
     "dashboard.index.history.title": "Dine siste endringer",
     "dashboard.index.history.text": "Dine siste endrede sider vil vises her for å gjøre det enkelt å finne dem igjen senere.",
     "dashboard.index.license.title": "Kirby lisens",
+    "dashboard.index.license.text": "It seems you are running Kirby on a public server without a valid license!\n\nPlease, support Kirby and (link: {buy} text: buy a license now)\n\nIf you already have a license key, just add it to your config file: (link: {docs} text: site/config/config.php)",
     "metatags": "Nettsted variabler",
     "metatags.info": "Kirby informasjon",
     "metatags.license": "Kirby lisens",
@@ -100,13 +101,13 @@
     "pages.url.uid.label.option": "Opprett fra tittel",
     "pages.url.error.exists": "En side med samme appendiks finnes allerede",
     "pages.url.error.move": "Appendiks kunne ikke bli endret",
-    "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
+    "pages.url.error.rights": "Du kan ikke endre URLen for denne siden",
+    "pages.url.home.error.error": "URLen for hjem og error sider kan ikke bli endret",
     "pages.toggle.position": "Posisjon",
     "pages.toggle.invisible": "usynlig",
-    "pages.toggle.publish": "Do you really want to change the status of this page to **visible?**",
-    "pages.toggle.hide": "Do you really want to change the status of this page to **invisible?**",
-    "pages.toggle.error.error": "The status of the error page cannot be changed",
+    "pages.toggle.publish": "Vil du virkelig endre statusen for denne siden til **synlig?**",
+    "pages.toggle.hide": "Vil du virkelig endre statusen for denne siden til **usynlig?**",
+    "pages.toggle.error.error": "Statusen for error siden kan ikke bli endret",
     "pages.delete.headline": "Vil du virkelig slette denne siden?",
     "pages.delete.error.home.headline": "Startsiden kan ikke slettes",
     "pages.delete.error.home.text": "Du prøver å slette startsiden. Dette er ikke mulig og vil lede til uønskede effekter.",
@@ -129,8 +130,8 @@
     "subpages.index.visible.help": "Dra usynlige sider her for å sortere dem/gjøre dem synlige.",
     "subpages.index.invisible": "Usynlige sider",
     "subpages.index.invisible.help": "Dra synlige sider her for å sortere dem/gjøre dem usynlige.",
-    "subpages.add.error": "This page is not allowed to have subpages",
-    "subpages.add.error.more": "This page cannot have any more subpages",
+    "subpages.add.error": "Denne siden er ikke tillatt å ha undersider",
+    "subpages.add.error.more": "Denne siden kan ikke å ha flere undersider",
     "subpages.error.missing": "Siden kunne ikke bli funnet",
     "files": "Filer",
     "files.index.headline": "Filer for",
@@ -140,15 +141,15 @@
     "files.index.upload.first.button": "Last opp den første filen",
     "files.index.edit": "Rediger",
     "files.index.delete": "Slett",
-    "files.index.error.disabled": "The page is not allowed to have any files",
-    "files.add.error.max": "The maximum number of files for the current page has been reached.",
-    "files.add.error.extension.missing": "You cannot upload files without extension",
-    "files.add.error.extension.forbidden": "Forbidden file extension",
-    "files.add.error.mime.forbidden": "Forbidden mime type",
-    "files.add.error.htaccess": "htaccess files cannot be uploaded",
-    "files.add.error.invisible": "Invisible files cannot be uploaded",
-    "files.add.blueprint.type.error": "Page only allows:",
-    "files.add.blueprint.size.error": "Page only allows file size of",
+    "files.index.error.disabled": "Denne siden er ikke tillatt å ha filer",
+    "files.add.error.max": "Maksimalt antall filer for den gjeldende siden er nådd.",
+    "files.add.error.extension.missing": "Du kan ikke laste opp filer uten filtype",
+    "files.add.error.extension.forbidden": "Ugyldig filtype",
+    "files.add.error.mime.forbidden": "Ugyldig MIME-type",
+    "files.add.error.htaccess": "htaccess filer kan ikke bli lastet opp",
+    "files.add.error.invisible": "Usynlige filer kan ikke bli lastet opp",
+    "files.add.blueprint.type.error": "Siden godtar kun:",
+    "files.add.blueprint.size.error": "Siden tillater bare filstørrelsen:",
     "files.show.name.label": "Filnavn",
     "files.show.info.label": "Type / Størrelse / Dimensjoner",
     "files.show.link.label": "Offentlig link",
@@ -196,29 +197,29 @@
     "users.form.back": "Tilbake til brukere",
     "users.form.error.password.confirm": "Vennligst bekreft passordet",
     "users.form.error.update": "Brukeren kunne ikke bli oppdatert",
-    "users.form.error.update.rights": "You are not allowed to update this user",
+    "users.form.error.update.rights": "Du er ikke tillat til å oppdatere denne brukeren",
     "users.form.error.create": "Brukeren kunne ikke bli opprettes",
     "users.form.error.permissions.title": "Account mappen er ikke skrivbar",
     "users.form.error.permissions.text": "Vennligst kontroller at /site/accounts eksiterer og er skrivbar.",
     "users.delete.headline": "Vil du virkelig slette denne konten?",
     "users.delete.error": "Denne brukeren kunne ikke bli slettet",
-    "users.delete.error.permission": "You are not allowed to delete users",
-    "users.delete.error.permission.single": "You are not allowed to delete this user",
-    "users.delete.error.lastadmin": "You cannot delete the last admin",
+    "users.delete.error.permission": "Du er ikke tillat til å slette brukere",
+    "users.delete.error.permission.single": "Du er ikke tillat å slette denne brukeren",
+    "users.delete.error.lastadmin": "Du kan ikke slette den siste admin",
     "users.avatar.drop": "Slipp profil bildet her…",
     "users.avatar.click": "…eller klikk for å laste opp",
     "users.avatar.error.type": "Du kan kun laste opp JPG, PNG og GIF filer",
     "users.avatar.error.folder.headline": "Avatar mappen er ikke skrivbar",
     "users.avatar.error.folder.text": "Vennligst opprett mappen <strong>/assets/avatars</strong> og kontroller att den er skrivbar for å laste opp profil bilder.",
-    "users.avatar.error.permission": "You are not allowed to change the avatar",
+    "users.avatar.error.permission": "Du er ikke tillat til å endre avatar",
     "users.avatar.delete.error": "Profil bildet kunne ikke bli slette",
-    "users.avatar.delete.error.permission": "You are not allowed to delete the avatar of this user",
+    "users.avatar.delete.error.permission": "Du er ikke tillat til å slette avataren til denne brukeren",
     "users.avatar.delete.success": "Profil bildet har blitt slettet",
-    "users.avatar.missing": "This user has no avatar",
+    "users.avatar.missing": "Denne brukerer har ingen avatar",
     "users.error.missing": "Brukeren kunne ikke bli funnet",
     "user.error.lastadmin": "Du er den eneste administrator. Dette kan ikke endres.",
-    "form.error.missing": "The form cannot be found",
-    "form.construct.error.invalid": "Invalid form construction method",
+    "form.error.missing": "Skjemaet kan ikke funnet",
+    "form.construct.error.invalid": "Ugyldig skjema byggemåte",
     "fields.required": "Påkrevd",
     "fields.date.label": "Dato",
     "fields.date.months": [
@@ -263,7 +264,7 @@
     "fields.structure.add": "Legg til",
     "fields.structure.add.first": "Legg til den første oppføringen",
     "fields.structure.empty": "Ingen oppføringer enda",
-    "fields.structure.entry.error": "The item could not be found",
+    "fields.structure.entry.error": "Elementet kunne ikke bli funnet",
     "fields.structure.cancel": "Avbryt",
     "fields.structure.save": "Lagre",
     "fields.structure.edit": "Rediger",
@@ -283,10 +284,10 @@
     "fields.toggle.no": "Nei",
     "fields.toggle.on": "På",
     "fields.toggle.off": "Av",
-    "fields.error.missing.controller": "The field controller file is missing",
-    "fields.error.missing.class": "The field controller class is missing",
-    "fields.error.route.invalid": "Invalid field route",
-    "fields.error.extended": "The field cannot be extended",
+    "fields.error.missing.controller": "Felt kontroller filen mangler",
+    "fields.error.missing.class": "Felt kontroller klassen mangler",
+    "fields.error.route.invalid": "Ugyldig felt rute",
+    "fields.error.extended": "Feltet kan ikke bli utvidet",
     "editor.link.url.label": "Sett inn URL",
     "editor.link.text.label": "Koblingstekst",
     "editor.link.text.help": "Koblingstekst er valgfri",
@@ -296,8 +297,8 @@
     "editor.email.text.help": "Koblingstekst er valgfri",
     "editor.file.empty": "Denne siden har ingen filer",
     "editor.image.empty": "Denne siden har ingen bilder",
-    "autocomplete.method.error": "Invalid autocomplete method",
-    "blueprints.error.default.missing": "Missing default blueprint",
+    "autocomplete.method.error": "Ugyldig autocomplete metode",
+    "blueprints.error.default.missing": "Mangler standard blåkopi",
     "error": "Feil",
     "error.headline": "Feil"
 }
