--- a/app/translations/sv_SE/core.json
+++ b/app/translations/sv_SE/core.json
@@ -1,17 +1,17 @@
 {
     "cancel": "Avbryt",
     "add": "Lägg till",
-    "addit": "Add & Edit",
+    "addit": "Lägg till & redigera",
     "save": "Spara",
     "saved": "Sparad!",
     "change": "Spara ändring",
     "delete": "Radera",
     "insert": "Infoga",
     "ok": "Ok",
-    "routes.error.invalid": "Invalid Panel URL",
-    "controller.error.invalid": "Invalid controller",
-    "controller.error.action": "Invalid action",
-    "view.error.invalid": "Invalid view:",
+    "routes.error.invalid": "Ogiltig panel URL",
+    "controller.error.invalid": "Ogiltig kontroll",
+    "controller.error.action": "Ogiltig åtgärd",
+    "view.error.invalid": "Ogiltig vy:",
     "options.show": "Visa alternativ",
     "options.hide": "Göm alternativ",
     "installation": "Installation",
@@ -52,6 +52,7 @@
     "dashboard.index.history.title": "Senast ändrade sidor",
     "dashboard.index.history.text": "De senast ändrade sidor kommer att synas här för att de ska enkelt att hitta de igen.",
     "dashboard.index.license.title": "Kirbylicens",
+    "dashboard.index.license.text": "It seems you are running Kirby on a public server without a valid license!\n\nPlease, support Kirby and (link: {buy} text: buy a license now)\n\nIf you already have a license key, just add it to your config file: (link: {docs} text: site/config/config.php)",
     "metatags": "Webbplatsens metadata",
     "metatags.info": "Information om Kirby",
     "metatags.license": "Kirbylicens",
@@ -66,8 +67,8 @@
     "pages.show.changeurl": "Ändra webbadress",
     "pages.show.invisible": "Dold i meny",
     "pages.show.visible": "Synlig i meny",
-    "pages.show.changes.text": "You have unsaved changes!",
-    "pages.show.changes.button": "Discard",
+    "pages.show.changes.text": "Du har ändringar som inte sparats!",
+    "pages.show.changes.button": "Skrota",
     "pages.show.delete": "Radera sida",
     "pages.show.subpages.title": "Undersidor",
     "pages.show.subpages.edit": "Ändra",
