--- a/app/translations/tr/core.json
+++ b/app/translations/tr/core.json
@@ -21,8 +21,8 @@
     "installation.check.error": "Bazı sorunlar mevcut!",
     "installation.check.error.accounts": "/site/accounts klasörü yazılabilir değil",
     "installation.check.error.avatars": "/assets/avatars klasörü yazılabilir değil",
-    "installation.check.error.blueprints": "Lütfen şu klasörü oluştur : /site/blueprints",
-    "installation.check.error.content": "Content adındaki klasör ve içindeki tüm klasörler, dosyalar yazılabilir olmalı",
+    "installation.check.error.blueprints": "Lütfen şu klasörü oluşturun : /site/blueprints",
+    "installation.check.error.content": "Content adındaki klasör ve içindeki tüm klasörler, dosyalar yazılabilir olmalı.",
     "installation.check.error.thumbs": "thumb klasörü yazılabilir olmalı",
     "installation.signup.username.label": "İlk hesabını oluştur",
     "installation.signup.username.placeholder": "Kullanıcı Adı",
@@ -52,6 +52,7 @@
     "dashboard.index.history.title": "Son güncellemelerin",
     "dashboard.index.history.text": "Son güncellemelerin, daha sonra tekrar kolayca bulabilmen için burada görünecek",
     "dashboard.index.license.title": "Kirby lisans",
+    "dashboard.index.license.text": "It seems you are running Kirby on a public server without a valid license!\n\nPlease, support Kirby and (link: {buy} text: buy a license now)\n\nIf you already have a license key, just add it to your config file: (link: {docs} text: site/config/config.php)",
     "metatags": "Site seçenekleri",
     "metatags.info": "Kirby bilgi",
     "metatags.license": "Kirby lisans",
