--- a/app/translations/nl/core.json
+++ b/app/translations/nl/core.json
@@ -52,6 +52,7 @@
     "dashboard.index.history.title": "Jouw laatste updates",
     "dashboard.index.history.text": "Pagina's die het laatst door jou zijn gewijzigd komen hier te staan, om ze weer makkelijk terug te kunnen vinden.",
     "dashboard.index.license.title": "Kirby licentie",
+    "dashboard.index.license.text": "It seems you are running Kirby on a public server without a valid license!\n\nPlease, support Kirby and (link: {buy} text: buy a license now)\n\nIf you already have a license key, just add it to your config file: (link: {docs} text: site/config/config.php)",
     "metatags": "Site-variabelen",
     "metatags.info": "Kirby info",
     "metatags.license": "Kirby licentie",
