--- a/app/translations/zh_TW/core.json
+++ b/app/translations/zh_TW/core.json
@@ -52,6 +52,7 @@
     "dashboard.index.history.title": "頁面編輯紀錄",
     "dashboard.index.history.text": "您最近修改的頁面會顯示在這裡，方便您再次編輯。",
     "dashboard.index.license.title": "Kirby license",
+    "dashboard.index.license.text": "It seems you are running Kirby on a public server without a valid license!\n\nPlease, support Kirby and (link: {buy} text: buy a license now)\n\nIf you already have a license key, just add it to your config file: (link: {docs} text: site/config/config.php)",
     "metatags": "網站資料",
     "metatags.info": "Kirby info",
     "metatags.license": "Kirby license",
